--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,15 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+
+.navbar-style {
+    @apply bg-cyan-950 w-64 h-full fixed flex items-center justify-center
+}
+.navbar-button-styling {
+    @apply block bg-cyan-700 text-white py-10 px-10 rounded-lg text-center hover:bg-cyan-500 transition duration-300 ease-in-out;
+}
+
+.navbar-button-hover{
+    @apply opacity-0 group-hover:opacity-100 absolute italic top-1/2 left-3/4 transform -translate-y-1/2 bg-black text-white text-sm py-1 px-2 rounded-lg shadow-lg transition-opacity duration-300
+}
