--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,13 +3,17 @@
 @import "tailwindcss/utilities";
 
 
+body {
+    @apply font-oswald m-0 p-0 box-border bg-cyan-800;
+}
+
 .navbar-style {
-    @apply bg-cyan-950 w-64 h-full fixed flex items-center justify-center
+    @apply bg-cyan-950 h-full fixed flex place-items-start justify-center p-4 font-oswald;
 }
 .navbar-button-styling {
-    @apply block bg-cyan-700 text-white py-10 px-10 rounded-lg text-center hover:bg-cyan-500 transition duration-300 ease-in-out;
+    @apply flex items-center bg-cyan-700 text-white py-3 px-4 rounded-lg hover:bg-cyan-500 transition duration-300 ease-in-out font-oswald;
 }
 
 .navbar-button-hover{
-    @apply opacity-0 group-hover:opacity-100 absolute italic top-1/2 left-3/4 transform -translate-y-1/2 bg-black text-white text-sm py-1 px-2 rounded-lg shadow-lg transition-opacity duration-300
+    @apply opacity-0 group-hover:opacity-100 absolute italic top-3/4 left-3/4 bg-black font-oswald text-white text-sm py-1 px-2 rounded-lg shadow-lg transition-opacity duration-300
 }
