--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,16 +4,20 @@
 
 
 body {
-    @apply font-oswald m-0 p-0 box-border bg-cyan-800;
+    @apply font-oswald m-0 p-0 box-border bg-cyan-700;
 }
 
 .navbar-style {
     @apply bg-cyan-950 h-full fixed flex place-items-start justify-center p-4 font-oswald;
 }
 .navbar-button-styling {
-    @apply flex items-center bg-cyan-700 text-white py-3 px-4 rounded-lg hover:bg-cyan-500 transition duration-300 ease-in-out font-oswald;
+    @apply flex items-center bg-cyan-500 text-white py-3 px-4 rounded-lg hover:bg-cyan-400 transition duration-300 ease-in-out font-oswald;
 }
 
 .navbar-button-hover{
-    @apply opacity-0 group-hover:opacity-100 absolute italic top-3/4 left-3/4 bg-black font-oswald text-white text-sm py-1 px-2 rounded-lg shadow-lg transition-opacity duration-300
+    @apply opacity-0 group-hover:opacity-100  absolute italic top-3/4 left-3/4 bg-black font-oswald text-white text-sm py-1 px-2 rounded-lg shadow-lg transition-opacity duration-300
+}
+
+.general-button-styling{
+    @apply mt-8 bg-cyan-500 text-white py-3 px-4 rounded-lg hover:bg-cyan-400 transition duration-300 ease-in-out
 }
