--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,7 @@ body {
     @apply bg-cyan-950 h-full fixed flex place-items-start justify-center p-4 font-oswald;
 }
 .navbar-button-styling {
-    @apply flex items-center bg-cyan-500 text-white py-3 px-4 rounded-lg hover:bg-cyan-400 transition duration-300 ease-in-out font-oswald;
+    @apply flex items-center bg-cyan-500 text-white py-3 px-4 rounded-lg hover:bg-cyan-400 transition duration-300 ease-in-out transform hover:scale-105 font-oswald;
 }
 
 .navbar-button-hover{
@@ -19,5 +19,5 @@ body {
 }
 
 .general-button-styling{
-    @apply mt-8 bg-cyan-500 text-white py-3 px-4 rounded-lg hover:bg-cyan-400 transition duration-300 ease-in-out
+    @apply mt-8 bg-cyan-500 text-white py-3 px-4 rounded-lg hover:bg-cyan-400 transition duration-300 ease-in-out transform hover:scale-105;
 }
