--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,7 @@ body {
     @apply bg-cyan-700 h-full fixed flex place-items-start justify-center p-4 font-oswald;
 }
 .navbar-button-styling {
-    @apply flex items-center bg-cyan-500 text-white py-3 px-4 rounded-lg hover:bg-cyan-400 transition duration-300 ease-in-out transform hover:scale-105 font-oswald;
+    @apply flex items-center bg-cyan-600 text-white py-3 px-4 rounded-lg hover:bg-cyan-500 transition duration-300 ease-in-out transform hover:scale-105 font-oswald;
 }
 
 .navbar-button-hover{
@@ -23,11 +23,11 @@ body {
 }
 
 .box_with_shadow{
-    @apply my-0 flex flex-col items-center bg-white ring-1 ring-slate-500 shadow-xl p-5 rounded-lg w-full;
+    @apply my-0 flex flex-col items-center bg-slate-200 ring-1 ring-slate-500 shadow-xl p-5 rounded-lg w-full;
 }
 
 .heading{
-    @apply text-3xl font-bold mb-5 text-center text-gray-500 font-mono;
+    @apply text-6xl font-bold mb-5 text-center text-gray-500 font-mono;
 }
 
 .subheading{
