--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,6 +22,11 @@ body {
     @apply mt-8 bg-cyan-500 text-white font-sans py-3 px-4 rounded-lg hover:bg-cyan-400 transition duration-300 ease-in-out transform hover:scale-105 shadow-lg;
 }
 
+.compare-page-buttons{
+    @apply mt-8 bg-cyan-500 text-white font-sans py-3 px-12 rounded-lg hover:bg-cyan-400 transition duration-300 ease-in-out transform hover:scale-105 shadow-lg;
+
+}
+
 .box_with_shadow{
     @apply flex flex-col items-center bg-white ring-1 ring-slate-500 shadow-xl p-5 rounded-lg w-full hover:bg-slate-50;
 }
