--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -72,9 +72,8 @@ body {
 }
 
 .compare-nav-button {
-    @apply text-2xl p-2 text-cyan-600 hover:text-cyan-500 transition-colors duration-300;
+    @apply bg-cyan-600 h-80 px-2 rounded-lg text-2xl p-2 mb-0 text-white hover:text-cyan-500 transition-colors duration-300;
 }
-
 .compare-view-toggle {
     @apply flex gap-2 bg-gray-100 p-1 rounded-lg;
 }
