--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,9 @@ body {
     @apply mt-8 text-2xl bg-cyan-500 text-white font-sans py-3 px-8 rounded-lg hover:bg-cyan-400 transition duration-300 ease-in-out transform hover:scale-105 shadow-lg;
 }
 
+.compare-page-button-alt{
+    @apply mt-20 mr-20 text-xl bg-slate-600 text-white font-sans py-2 px-64 rounded-lg hover:bg-cyan-400 transition duration-300 ease-in-out transform hover:scale-105 shadow-lg;;
+}
 .compare-page-buttons-red {
     @apply mt-8 bg-red-400 text-white font-sans py-3 px-12 rounded-lg hover:bg-red-300 transition duration-300 ease-in-out transform hover:scale-105 shadow-lg;
 }
